cluster/homelab/apps/CTF/NuclearCodes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuclearsite
  namespace: ctf
spec:
  selector:
    app: nuclearsite
  ports:
    - port: 80
      targetPort: 80
